[gd_scene load_steps=3 format=3 uid="uid://btaxc061edjwc"]

[ext_resource type="Script" path="res://scenes/player_components/player_hitbox_component.gd" id="1_870ny"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gpcnl"]
height = 48.0

[node name="PlayerHitboxComponent" type="Area2D"]
collision_layer = 2
collision_mask = 20
script = ExtResource("1_870ny")

[node name="PlayerHitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_gpcnl")

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
